--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 notebook==6.4.0
 numpy 
-opencv-python==4.5.3.56
-opencv-python-headless==4.5.3.56
+opencv-python
+opencv-python-headless
 packaging==21.0
 pandas==1.3.1
 pandocfilters==1.4.3
