--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 notebook==6.4.0
 numpy 
 opencv-python
-opencv-python-headless
+opencv-python-headless==4.2.0.32
 packaging==21.0
 pandas==1.3.1
 pandocfilters==1.4.3
